# ROS-course

./: README.md  lab1_task.txt  lab2_task.txt  node1.cpp
1303/AM/: ROS_Report.docx
1303/KA/coursework/: plan.MD  report.doc
1303/PI/1/: package.xml
1303/PI/3/: CMakeLists.txt  package.xml
1303/PI/3/src/: Bot.cpp  main1.cpp  main2.cpp  smart_bot.cpp  stupid_bot.cpp
1303/PI/4/: package.xml
1303/PI/lab_01/: CMakeLists.txt  package.xml
1303/PI/lab_01/src/: main.cpp
1303/PN/course/: Отчет.docx
1303/PV/4/: CMakeLists.txt  package.xml
1303/PV/4/src/: main.cpp
1303/PV/5/: CMakeLists.txt  package.xml
1303/PV/5/src/: c3po.cpp  r2d2.cpp
1303/PV/course_work/: CMakeLists.txt  package.xml
1303/PV/course_work/launch/: run_all.launch
1303/PV/course_work/src/: commander.cpp  flagman.cpp  world.cpp
1303/ShV/RobotsBattles/: Otchet.docx
1303/VA/1/: CMakeLists.txt
1303/ZA/curs/: план.txt
1304/BaD/1/: package.xml
1304/BaD/3/: package.xml
1304/BaD/4/: package.xml
1304/BaD/5/: package.xml
1304/BoA/1/: package.xml
1304/BoA/3/: package.xml
1304/BoA/4/: package.xml
1304/BoA/5/: package.xml
1304/ChD/1/: lab1.cpp
1304/ChD/3/: package.xml
1304/ChD/5/: package.xml
1304/KD/3/: CMakeLists.txt  package.xml
1304/KD/3/src/: bot.cpp
1304/KD/4/: CMakeLists.txt  package.xml
1304/KD/4/launch/: test_two.launch
1304/KD/4/src/: teleop.cpp
1304/KD/5/: CMakeLists.txt  package.xml
1304/KN/course_work/: Description.txt  GithubLink.txt  GoogleDocsLink.txt  Plan.txt
1304/MN/: План курсовой работы.md
1304/OI/1/: CMakeLists.txt  package.xml
1304/OI/4/: CMakeLists.txt  package.xml
1304/OI/4/src/: planner.cpp
1304/OI/5/: CMakeLists.txt  package.xml
1304/OI/Курсовая_работа/: CMakeLists.txt  package.xml
1304/OI/Курсовая_работа/src/: battlefield.h  battleteam.cpp  battleteam.h  bullet.h  entity.h  main.cpp  maths.cpp  maths.h  movingentity.cpp  movingentity.h  robot.cpp  robot.h  robotbase.cpp  robotbase.h  robotcommander.h  robotdecorator.h  steeringbehaviors.cpp  steeringbehaviors.h
1304/VA/cource work/: Отчёт по курсовой работе.docx
3303/Faber_Vadim/course_work/: CMakeLists.txt  package.xml
3303/Faber_Vadim/course_work/src/: course_work_key.cpp  course_work_node.cpp
3303/Faber_Vadim/lab3/: CMakeLists.txt  package.xml
3303/Faber_Vadim/lab5/: CMakeLists.txt
3303/Faber_Vadim/lab5/src/: utilities.h
3303/GeKao/course_work/: CMakeLists.txt  package.xml
3303/GeKao/lab3/: CMakeLists.txt  package.xml
3303/GeKao/lab5/: CMakeLists.txt  package.xml
3303/Gridneva_Kristina/Coursework/: CMakeLists.txt  final_work.launch
3303/Gridneva_Kristina/Lab1/: CMakeLists.txt  package.xml
3303/Gridneva_Kristina/Lab5/: CMakeLists.txt  package.xml
3303/Hanukashvili/Lr_1/: CMakeLists.txt  package.xml
3303/Kren_Anastasiya/: ROS_Kursach.doc
3303/Kren_Anastasiya/kursovaya/: new_world1.world  new_world2.world  package.xml
3303/Kren_Anastasiya/lab1/: package.xml
3303/Kren_Anastasiya/lab3/: CMakeLists.txt  package.xml
3303/Kren_Anastasiya/lab5/: create.launch  create.sdf  create.world  create2.sdf  listener.cpp  talker.cpp
3303/Kren_Anastasiya_lab1/: CMakeLists.txt
3303/Kren_Anastasiya_lab1/src/: publisher.cpp
3303/Saklakova/lab1/: run_turtles.launch
3303/Saklakova/lab3/: CMakeLists.txt  package.xml  run_robots.launch
3303/Saklakova/lab5/: CMakeLists.txt  package.xml
3303/alaerov_shohinjon/lab5/: lab5.launch  package.xml
3303/levshin_pavel/Lab1/: CMakeLists.txt  package.xml
3303/levshin_pavel/course/: CMakeLists.txt  package.xml
3303/pereverzev_evgeniy/lab1/: lab1.cpp
3303/pereverzev_evgeniy/lab3/: CMakeLists.txt  package.xml
3303/Тан Голян/lab3/: lab3.rviz
3304/Bykov_Andrei/course_work/: CMakeLists.txt
3304/Bykov_Andrei/course_work/src/: course_work_key.cpp  course_work_node.cpp
3304/Bykov_Andrei/lab1/: package.xml
3304/Bykov_Andrei/lab1/src/: lab1.cpp
3304/Diogenova_Ksenia/lab5/: CMakeLists.txt  package.xml
3304/Diogenova_Ksenia/lab5/src/: lost.cpp  rescuer.cpp  robot.h
3304/Javier/: CMakeLists.txt  package.xml
3304/Javier/lab3/: CMakeLists.txt  default.rviz  lab3.launch  package.xml
3304/Javier/lab3/src/: publisher.cpp  subscriber.cpp
3304/Sandin_Artem/cw/: cw.launch  package.xml
3304/Sandin_Artem/cw/src/: robot_info.cpp
3304/blees_eduard/lab3/: CMakeLists.txt  package.xml
3304/blees_eduard/lab3/include/lab3/: lost_robot.h  robot.h  saver_robot.h
3304/blees_eduard/lab3/src/: lost_main.cpp  lost_robot.cpp  robot.cpp  saver_main.cpp  saver_robot.cpp
3304/blees_eduard/lab5/: CMakeLists.txt  package.xml
3304/blees_eduard/lab5/include/lab5/: lost_robot.h  robot.h  saver_robot.h
3304/blees_eduard/lab5/src/: lost_main.cpp  lost_robot.cpp  robot.cpp  robot.h  saver_main.cpp  saver_robot.cpp
3304/chirukhin_alexey/coursework/: CMakeLists.txt  package.xml
3304/chirukhin_alexey/coursework/src/: base.cpp  base.h  enemy.h  main.cpp  robot.h
3304/chirukhin_alexey/lab5/: CMakeLists.txt  package.xml
3304/chirukhin_alexey/lab5/src/: lost.cpp  rescuer.cpp  robot.h
3304/italyantsev_yan/cw/: CMakeLists.txt  lab5.launch
3304/italyantsev_yan/cw/msg/: picked.msg  status.msg
3304/italyantsev_yan/cw/src/: bonus.cpp  bonus_info.cpp  bonus_info.h  supplies.cpp  survivor.cpp  zombies.cpp
3304/italyantsev_yan/lab2_publisher/: CMakeLists.txt  package.xml
3304/italyantsev_yan/lab2_publisher/src/: publisher.cpp
3304/italyantsev_yan/lab3/: CMakeLists.txt  default.rviz  lab3.launch  package.xml
3304/italyantsev_yan/lab3/src/: publisher.cpp  subscriber.cpp
3304/lab3/: lab3.launch
Robots/: CMakeLists.txt  FindRobot.cpp  LostRobot.cpp  package.xml
keyboard_handler/: new_getch.cpp
kravchenko_dima/: README.md
lab1/: CMakeLists.txt  package.xml
lab1/src/: publisher.cpp
lab2/message/: CMakeLists.txt  package.xml
lab2/reader/: CMakeLists.txt  package.xml
lab2/writer/: CMakeLists.txt  package.xml
labutin_igor/lab02/: sticks.launch
tonkikh_andrei/lab01/: README.md
tonkikh_andrei/lab02/: CMakeLists.txt  config.rviz  package.xml  run.launch
valin_gleb/1/: README.md
valin_gleb/2/: rods.launch
(+672 files in other folders)
