<?xml version="1.0"?>
<package>
  <name>lab_01</name>
  <version>1.0.0</version>
  <description>LAB WORK #1</description>
  <maintainer email="iv.pushk@gmail.com">Ivan Pushkin</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export></export>
</package>
