<?xml version="1.0"?>
<package>
  <name>lab5</name>
  <version>0.0.1</version>
  <description>lab5</description>

  <maintainer email="parfenov.vladimir.s@gmail.com">Vladimir</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>


    <build_depend>gazebo</build_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>gazebo</run_depend>
    <run_depend>roscpp</run_depend>
    
  </export>
</package>