<?xml version="1.0"?>
<package>
  <name>course_work</name>
  <version>1.0.0</version>
  <description>Course work</description>

  <maintainer email="parfenov.vladimir.s@gmail.com">Vladimir Parfenov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <depend>roscpp</depend>
    <depend>visualization_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
  </export>

</package>
