<?xml version="1.0"?>
<package>
  <name>roaming_robot</name>
  <version>0.0.0</version>
  <description>The roaming_robot package</description>
  <maintainer email="dima6120@gmail.com">dima6120</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>