<?xml version="1.0"?>
<package>
  <name>lab3</name>
  <version>0.0.0</version>
  <description>The lab3 package</description>
  <maintainer email="anton@todo.todo">anton</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
</package>
