<?xml version="1.0"?>
<package>
  <name>lab2_publisher</name>
  <version>0.0.0</version>
  <description>The lab2_publisher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bedrang@todo.todo">bedrang</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>msgnumberone</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>msgnumberone</run_depend>
   <build_depend>msgnumbertwo</build_depend>
  <run_depend>msgnumbertwo</run_depend>
</package>
